system/argocd/ingress.yaml
# system/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.bapttf.com`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  tls: {}
